@@ -229,7 +229,7 @@ public class ApplicationProperties {
                 List<String> scopesList =
                         Arrays.stream(scopes.split(","))
                                 .map(String::trim)
-                                .collect(Collectors.toList());
+                                .toList();
                 this.scopes.addAll(scopesList);
             }
 
@@ -256,17 +256,13 @@ public class ApplicationProperties {
                 private KeycloakProvider keycloak = new KeycloakProvider();
 
                 public Provider get(String registrationId) throws UnsupportedProviderException {
-                    switch (registrationId.toLowerCase()) {
-                        case "google":
-                            return getGoogle();
-                        case "github":
-                            return getGithub();
-                        case "keycloak":
-                            return getKeycloak();
-                        default:
-                            throw new UnsupportedProviderException(
-                                    "Logout from the provider is not supported? Report it at https://github.com/Stirling-Tools/Stirling-PDF/issues");
-                    }
+                    return switch (registrationId.toLowerCase()) {
+                        case "google" -> getGoogle();
+                        case "github" -> getGithub();
+                        case "keycloak" -> getKeycloak();
+                        default -> throw new UnsupportedProviderException(
+                                "Logout from the provider is not supported? Report it at https://github.com/Stirling-Tools/Stirling-PDF/issues");
+                    };
                 }
             }
         }
